Bug 493732 - Section expander and collapser in about:certerror appear on the left side and have the wrong direction in RTL mode; r=dao a=gavin
UltraBlame original commit: a59221f025aae009f871bf6bd16e1f62a2f2f02d

--- a/browser/components/certerror/content/aboutCertError.css
+++ b/browser/components/certerror/content/aboutCertError.css
@@ -41,6 +41,7 @@
 
 
 
+
 #technicalContentText {
   overflow: auto;
   white-space: pre-wrap;
@@ -48,9 +49,15 @@
 
 #technicalContent > h2, #expertContent > h2 {
   cursor: pointer;
-  padding-left: 20px;
+  -moz-padding-start: 20px;
   position: relative;
   left: -20px;
+}
+
+body[dir="rtl"] #technicalContent > h2,
+body[dir="rtl"] #expertContent > h2 {
+  left: auto;
+  right: -20px;
 }
 
 div[collapsed] > p,
